BEEBEEP (Secure Lan Messanger)

BeeBEEP 2.0.4
- Some GUI improvements (new icons, file sharing tree load faster)
- Always Beep on new message arrived option added
- Favorite users (right click on user and enable star button) is on top of the list
- improved group usability
- Offline users can be removed from list (right click on an offline user in list and then remove)

BeeBEEP 2.0.3
- Fixed shared folder tree

BeeBEEP 2.0.2
- Fixed a bug in "open url" function

BeeBEEP 2.0.1
- Fixed icon problem in Linux system tray 

BeeBEEP 2.0.0
- Updated to Qt Library 5.4.2 (for unicode emojis but it will be more than doubled the package size)
- Users can be saved on exit
- Offline messages
- Send file and folder by drag and drop in a chat
- Message box can be resized
- Show only last [num] messages (increase the usability)
- Reset windows geometry to default at startup option
- New emoticons interface (emojis)
- Escape key will minimize BeeBEEP into the system tray (option)
- DataFolderPath and AddAccountNameToDataFolder option in RC file
- ConfirmOnDownloadFile option added
- Disable notification for group option added in group menu (right click on list)
- User online/offline status notification in tray
- Chat can be saved in pdf format
- Show downloaded image preview in chat (option)

BeeBEEP 1.0.2 
- Show homepage with activities at startup (can be disabled by option)
- Display chat members in chat window and as selected users in user panel
- Added "Max simultaneous downloads" option in beebeep.ini configuration file
- Enabled multiple files and folder download from file sharing window
- Added a text filter to quickly search user in list

BeeBEEP 1.0.1
- Fixed notification bug with "always on top" option active
- More "image format type" added for profile picture
- Fixed font tonality in avatar creation

BeeBEEP 1.0.0
- Only an instance of BeeBEEP can started a time (can be changed in beebeep.rc file)
- Send message button
- Default avatar created for the users